retrieved/unpackaged/unpackaged/objects/Book_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Books Issue</relationshipLabel>
        <relationshipName>Books_Issue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY() + 2 + (
 IF( 
      WEEKDAY( Today() + 2) = 1   
        , 1
        ,0
    ) 
)</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Books Issue</relationshipLabel>
        <relationshipName>Books_Issue</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <label>Book Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Book__c</columns>
        <columns>Member__c</columns>
        <columns>Issue_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Return_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Issued_Books</fullName>
        <columns>NAME</columns>
        <columns>Book__c</columns>
        <columns>Member__c</columns>
        <columns>Issue_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Return_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Issued Books</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Book Issue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books Issue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Book_is_available</fullName>
        <active>true</active>
        <errorConditionFormula>Book__r.Issue_Count__c &gt; 0 &amp;&amp; ISBLANK( Return_Date__c )</errorConditionFormula>
        <errorDisplayField>Book__c</errorDisplayField>
        <errorMessage>This book is not available</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Members_are_not_allowed_more_than_2_book</fullName>
        <active>true</active>
        <errorConditionFormula>Member__r.Books_Issued__c &gt;= 2 &amp;&amp;  ISBLANK( Return_Date__c )</errorConditionFormula>
        <errorDisplayField>Member__c</errorDisplayField>
        <errorMessage>More than two books are not allowed to issue.</errorMessage>
    </validationRules>
</CustomObject>